# TriPhysics2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  trip2d.hpp
example/: CMakeLists.txt  build.bat  build.sh
example/include/: listener.hpp  renderer.hpp  window.hpp
example/src/: camera.cpp  listener.cpp  main.cpp  renderer.cpp  shader.cpp  window.cpp
include/: collision.hpp  force.hpp  intersection.hpp  primitives.hpp
src/: collision.cpp  force.cpp  intersection.cpp  primitives.cpp
